Change City Challenge Groups heading to uppercase

--- a/website/templates/website/freshers/jumpstart-2019.html
+++ b/website/templates/website/freshers/jumpstart-2019.html
@@ -219,7 +219,7 @@ body {
       <p>Completion of any of our smorgasbord of activities with be worth some point value so be sure to bring your A-game!</p>
       <p>Of course, it wouldn't be much of a challenge without prizes; be sure to attend the Jumpstart reception on Friday 27th September, where we'll have some goodies from ECSS and IBM up for grabs.</p>
       <section id="cityChallengeGroups" class="p-1">
-        <h3>City Challenge Groups</h3>
+        <h3 class="text-uppercase">City Challenge Groups</h3>
         <p>
           City challenge groups will be available later.
           <!--<a href="{% url 'jumpstart:home' %}">Login to view groups</a>.-->
