Minor updates to Jumpstart page

--- a/website/templates/website/freshers/jumpstart-2019.html
+++ b/website/templates/website/freshers/jumpstart-2019.html
@@ -177,7 +177,7 @@ body {
   <section id="timetable" class="py-4">
     <div class="container">
       <h2 class="text-uppercase">Timetable</h2>
-      <p>Jumpstart schedule for undergraduate and postgraduate taught will be available later.</p>
+      <p>Jumpstart schedule for undergraduate and postgraduate taught will be available soon.</p>
       <!--
       <div class="accordion mt-3" id="timetableAccordion">
         <div class="card">
@@ -218,10 +218,10 @@ body {
       <p>Get ready for The Jumpstart City Challenge 2019, Freshers! We'll be splitting you into teams and giving you the opportunity to compete in a series of group challenges and games, seeing some of our favourite things Southampton has to offer, alongside your assigned Jumpstart Group Leader (a current ECS student). This is the first of many chances you'll have to interact with the committee members, who will be glad to answer any of your questions and learn a bit more about us as a society.</p>
       <p>Completion of any of our smorgasbord of activities with be worth some point value so be sure to bring your A-game!</p>
       <p>Of course, it wouldn't be much of a challenge without prizes; be sure to attend the Jumpstart reception on Friday 27th September, where we'll have some goodies from ECSS and IBM up for grabs.</p>
-      <section id="cityChallengeGroups" class="p-1">
+      <section id="cityChallengeGroups" class="p-2 pt-3">
         <h3 class="text-uppercase">City Challenge Groups</h3>
         <p>
-          City challenge groups will be available later.
+          City challenge groups will be available soon.
           <!--<a href="{% url 'jumpstart:home' %}">Login to view groups</a>.-->
         </p>
       </section>
@@ -230,7 +230,7 @@ body {
   <section id="maps" class="pt-4">
     <div class="container">
       <h2 class="text-uppercase">Maps</h2>
-      <p>Jumpstart maps will be available later.</p>
+      <p>Jumpstart maps will be available soon.</p>
     </div>
     <!--
     <div id="map"></div>
@@ -249,7 +249,8 @@ body {
   <div class="container notes">
     <hr>
     <p>Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know if you do not want to be photographed/filmed. Find out more in our <a href="{% url 'website:media-notice' %}">media notice</a>.</p>
-    <small class="text-muted">Pictures on this page are from Jumpstart 2017.</small>
+    <small class="text-muted d-block">Pictures on this page are from Jumpstart 2017.</small>
+    <small class="text-muted d-block">Last updated on 16th Aug 2019.</small>
   </div>
 </main>
 {% endblock %}
