--- a/website/templates/website/media-notice.html
+++ b/website/templates/website/media-notice.html
@@ -9,6 +9,6 @@
   <p>The photographs/film might be published on our website, social media and other promotional materials.</p>
   <p>You have the option of coming to our events but opting out of being photographed/filmed. If you do not wish to appear in any images captured please notify us before the events or talk to us at the events.</p>
   <p>If you do not wish us to use any of your images anymore, please contact us. However, be aware that it might not always be possible to recall documents in which your images already appeared.</p>
-  <p class="text-muted">Last updated on 28th May 2018.</p>
+  <small class="text-muted d-block">Last updated on 28th May 2018.</p>
 </section>
 {% endblock %}
