--- a/website/templates/website/freshers/freshers-2019.html
+++ b/website/templates/website/freshers/freshers-2019.html
@@ -119,5 +119,8 @@
       </li> -->
     </ul>
   </section>
+  <div>
+    <small class="text-muted d-block">Last updated on 16th Aug 2019.</p>
+  </div>
 </main>
 {% endblock %}
