Update UG Jumpstart timetable

--- a/website/templates/website/freshers/jumpstart-2019.html
+++ b/website/templates/website/freshers/jumpstart-2019.html
@@ -177,8 +177,9 @@ body {
   <section id="timetable" class="py-4">
     <div class="container">
       <h2 class="text-uppercase">Timetable</h2>
-      <p>Jumpstart schedule for undergraduate and postgraduate taught will be available later.</p>
-      <!--
+      <p>
+        The timetables below shows ECS Jumpstart Freshers events and some other Freshers events in the university, to find out about other Freshers events in the university, see 
+      </p>
       <div class="accordion mt-3" id="timetableAccordion">
         <div class="card">
           <div class="card-header" id="ugScheduleHeading">
@@ -190,7 +191,7 @@ body {
           </div>
           <div id="ugSchedule" class="collapse show" aria-labelledby="ugScheduleHeading">
             <div class="card-body calendar-container">
-              <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=1&amp;bgcolor=%23f2a8a6&amp;src=fsntjlpn55svbf7u4rphn354bc%40group.calendar.google.com&amp;dates=20180923%2F20180929&amp;color=%23A32929&amp;ctz=Europe%2FLondon" height="500" class="calendar w-100"></iframe>
+              <iframe src="https://calendar.google.com/calendar/embed?src=71ljirlsoe8abh639ldph488rc%40group.calendar.google.com&ctz=Europe%2FLondon&showNav=1&showCalendars=0&mode=WEEK&height=550&wkst=1&bgcolor=%23f2a8a6&dates=20190922%2F20190928&color=%23A32929" height="550" class="calendar w-100"></iframe>
             </div>
           </div>
         </div>
@@ -204,12 +205,12 @@ body {
           </div>
           <div id="pgSchedule" class="collapse show" aria-labelledby="pgScheduleHeading">
             <div class="card-body calendar-container">
-              <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=1&amp;bgcolor=%23f2a77b&amp;src=tdibdfq86v9p2vfedjj7r7fqq0%40group.calendar.google.com&amp;dates=20180923%2F20180929&amp;color=%23BE6D00&amp;ctz=Europe%2FLondon" height="500" class="calendar w-100"></iframe>
+              <!-- <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=1&amp;bgcolor=%23f2a77b&amp;src=tdibdfq86v9p2vfedjj7r7fqq0%40group.calendar.google.com&amp;dates=20180923%2F20180929&amp;color=%23BE6D00&amp;ctz=Europe%2FLondon" height="500" class="calendar w-100"></iframe> -->
+              <p>Jumpstart schedule for postgraduate taught will be available later.</p>
             </div>
           </div>
         </div>
       </div>
-      -->
     </div>
   </section>
   <section id="cityChallenge" class="pt-4">
@@ -269,7 +270,6 @@ $(window).bind("scroll", function () {
 </script>
 
 <!-- Timetable -->
-<!--
 <script>
 // cloapse timetable when page loads
 $("#timetableAccordion .collapse").removeClass("show");
@@ -297,7 +297,6 @@ $("#pgScheduleButton").click(function() {
   }
 });
 </script>
--->
 
 <!-- Google maps -->
 <!--
