Add section ids to freshers page

--- a/website/templates/website/freshers/freshers-2019.html
+++ b/website/templates/website/freshers/freshers-2019.html
@@ -16,7 +16,7 @@
 
 {% block content %}
 <main class="container mt-3">
-  <section>
+  <section id="freshers">
     <h1>ECSS Freshers 2019</h1>
     <p>
       Welcome freshers! We are a student run society within Electronics and Computer Science (ECS) at the University of Southampton. We run a range of events throughout the terms including socials, video games and board games events, talks and workshops from industry. We also host the ECS Christmas party at the end of the first term, hackathons (including a big one planned this year) and the end of year BBQ. We do our very popular members' clothing orders every year (normally once a year so don't miss out), and some of the designs are from our members!
@@ -28,7 +28,7 @@
       You can find out more about the current <a href="{% url 'website:committee-overview' %}" title="ECSS committee">ECSS committee</a> and talk to the members in person around campus. If you are interested in joining the committee, look out for information about committee elections and AGM which is normally held in March or April.
     </p>
   </section>
-  <section>
+  <section id="jumpstart">
     <h2>Jumpstart and Schedule</h2>
     <p>
       Jumpstart is a series of ECS specific freshers events during the Freshers'. It is an opportunity for ECS freshers to meet other members in ECS, take part in a range of activities, and settle into Southampton. It is our first ECSS event of the year, and is sponsored by IBM. You can learn more at the <a href="{% url 'website:jumpstart-2019' %}">Jumpstart page</a>.
@@ -40,13 +40,13 @@
       There are also other <a href="https://www.southampton.ac.uk/welcome-events/" title="University of Southampton welcome events calendar">university welcome events</a> and <a href="https://www.susu.org/calendar/" title="University of Southampton Students' Union calendar">events in the Students' Union</a>.
     </p>
   </section>
-  <!-- <section>
+  <!-- <section id="guide">
     <h2>ECSS Student Guide</h2>
     <p>
       Feel excited, worried or lost? Have a look at our <a href="http://web.archive.org/web/20070724145311/http://society.ecs.soton.ac.uk/Freshtips">ECSS Student Guide from more than 12 years ago on Internet Archive</a> (things might have changed though)!
     </p>
   </section> -->
-  <section>
+  <section id="groups">
     <h2>Social Groups and Chat</h2>
     <p>
       We have an <a href="https://www.facebook.com/groups/ecss.soton/">ECSS Facebook group</a> for infomation about events, opportunities and members' discussions. We also manage an <a href="https://www.facebook.com/groups/ECSFreshers201920/">ECS Freshers 2019/2020 Facebook Group</a> for more freshers related discussions, and there is a chat which you can join after joining the freshers group or <a href="{% url 'website:contact' %}">contact us</a> for more information.
@@ -63,7 +63,7 @@
       </ul>
     </div>
   </section>
-  <section>
+  <section id="opportunities">
     <h2>Societies and Opportunities</h2>
     <p>
       If you fancy sports, have a look at our intramural football team within ECSS or join the group of people in ECSS go to running events, or learn more about us doing different kinds of sports at our <a href="{% url 'website:sports' %}" title="ECSS sports">sports page</a>.
@@ -75,7 +75,7 @@
       We run events with industry and this can be a good way for our members to establish connections with them. There are also career fairs (including the Faculty of Engineering and Physical Sciences specific ones), opportunities advertised, and supports in the university. You can find more about <a href="https://www.ecs.soton.ac.uk/careers" title="ECS Careers Hub">ECS Careers Hub</a>, university's <a href="https://www.southampton.ac.uk/careers/students/index.page" title="University of Southampton careers and employability service">careers and employability service</a> and <a href="https://mycareer.soton.ac.uk/" title="MyCareer: the University of Southampton's online career platform">MyCareer</a> (university's online career platform).
     </p>
   </section>
-  <section>
+  <section id="links">
     <h2>Useful Links</h2>
     <ul>
       <li>
