--- a/website/templates/website/freshers/jumpstart-2019.html
+++ b/website/templates/website/freshers/jumpstart-2019.html
@@ -192,10 +192,10 @@ body {
           <div id="ugSchedule" class="collapse show" aria-labelledby="ugScheduleHeading">
             <div class="card-body calendar-container">
               <iframe src="https://calendar.google.com/calendar/embed?src=71ljirlsoe8abh639ldph488rc%40group.calendar.google.com&ctz=Europe%2FLondon&showNav=1&showCalendars=0&mode=WEEK&height=550&wkst=1&bgcolor=%23f2a8a6&dates=20190922%2F20190928&color=%23A32929" height="550" class="calendar w-100"></iframe>
+              <small class="text-right d-block">
+                <a href="https://calendar.google.com/calendar/ical/71ljirlsoe8abh639ldph488rc%40group.calendar.google.com/public/basic.ics" title="Jumpstart 2019 UG Schedule iCal">Available in iCal format</a>
+              </small>
             </div>
-            <small class="mx-3 mb-3 text-right d-block">
-              <a href="https://calendar.google.com/calendar/ical/71ljirlsoe8abh639ldph488rc%40group.calendar.google.com/public/basic.ics" title="Jumpstart 2019 UG Schedule iCal">Available in iCal format</a>
-            </small>
           </div>
         </div>
         <div class="card">
@@ -208,8 +208,10 @@ body {
           </div>
           <div id="pgSchedule" class="collapse show" aria-labelledby="pgScheduleHeading">
             <div class="card-body calendar-container">
-              <!-- <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=550&amp;wkst=1&amp;bgcolor=%23f2a77b&amp;src=tdibdfq86v9p2vfedjj7r7fqq0%40group.calendar.google.com&amp;dates=20180923%2F20180929&amp;color=%23BE6D00&amp;ctz=Europe%2FLondon" height="550" class="calendar w-100"></iframe> -->
-              <p>Jumpstart schedule for postgraduate taught will be available soon.</p>
+              <iframe src="https://calendar.google.com/calendar/embed?src=fd7a9eatchb0ldnh99oq55nkec%40group.calendar.google.com&ctz=Europe%2FLondon&showNav=0&showCalendars=0&mode=WEEK&height=550&wkst=1&bgcolor=%23f2a77b&dates=20190922%2F20190928&color=%23BE6D00" height="550" class="calendar w-100"></iframe>
+              <small class="text-right d-block">
+                <a href="https://calendar.google.com/calendar/ical/fd7a9eatchb0ldnh99oq55nkec%40group.calendar.google.com/public/basic.ics" title="Jumpstart 2019 MSc Schedule iCal">Available in iCal format</a>
+              </small>
             </div>
           </div>
         </div>
