--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -99,7 +99,7 @@
         <li class="list-group-item">
           <ul class="list-unstyled">
             <li>
-              <a href="/admin/">Django admin</a>
+              <a href="/admin/">ECSSWEB Admin</a>
             </li>
             <li>
               <a href="/filestore/">Committee Files</a>
