Update helpers portal

--- a/jumpstart/templates/jumpstart/base.html
+++ b/jumpstart/templates/jumpstart/base.html
@@ -13,7 +13,7 @@ Jumpstart - ECSS
 
 {% block portalcontent %}
 <div>
-  <h1>Jumpstart</h1>
+  <h1><a href="{% url 'website:jumpstart-redirect' %}">Jumpstart</a></h1>
   {% block jumpstartcontent %}
   {% endblock %}
 </div>
