--- a/jumpstart/templates/jumpstart/jumpstart-helper.html
+++ b/jumpstart/templates/jumpstart/jumpstart-helper.html
@@ -1,38 +1,38 @@
 {% extends 'jumpstart/base.html' %}
 
 {% block jumpstartcontent %}
-{% for message in messages %}
+<!-- {% for message in messages %}
 {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
 <div class="alert alert-success">{{ message }}</div>
 {% endif %}
 {% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
 <div class="alert alert-warning">{{ message }}</div>
 {% endif %}
-{% endfor %}
-<p>Hi {% if helper.nickname %}{{ helper.nickname }}{% else %}{{ helper.name }}{% endif %}, welcome to <a href="{% url 'website:jumpstart-redirect' %}">Jumpstart</a>!</p>
+{% endfor %} -->
+<!-- <p>Hi {% if helper.nickname %}{{ helper.nickname }}{% else %}{{ helper.name }}{% endif %}, welcome to <a href="{% url 'website:jumpstart-redirect' %}">Jumpstart</a>!</p> -->
 <div class="card">
   <div class="card-header">
     Your Group
   </div>
   <div class="card-body">
     {% if helper.group.name %}
-    <h5>{{ helper.group.name }}</h5>
-    <small class="text-muted">Group {{ helper.group.id }}</small>
+    <h2 class="h6">{{ helper.group.name }}</h2>
+    <small class="text-muted d-block">Group {{ helper.group.number }}</small>
     {% else %}
-    <h5>Group {{ helper.group.id }}</h5>
+    <h2 class="h6">Group {{ helper.group.number }}</h2>
     {% endif %}
-    <div class="card-text my-3">
-      You are the helper of <b>{% if helper.group.name %}{{ helper.group.name }}{% else %}Group {{ helper.group.id }}{% endif %}</b>.
+    <div class="card-text">
+      You are the helper of {% if helper.group.name %}{{ helper.group.name }} (Group {{ helper.group.number }}){% else %}Group {{ helper.group.number }}{% endif %}.
     </div>
     <div class="card-text">
-      Member{{ helper.group.fresher_set.all|length|pluralize }} in {% if helper.group.name %}{{ helper.group.name }}{% else %}Group {{ helper.group.id }}{% endif %}:
-      <ul>
+      <a href="#" title="View Members in Your Group">{{ helper.group.fresher_set.all|length }} member{{ helper.group.fresher_set.all|length|pluralize }}</a> in your group.
+      <!-- <ul>
         {% for group_fresher in helper.group.fresher_set.all %}
         {% if group_fresher != fresher %}
         <li>{{ group_fresher.name }}</li>
         {% endif %}
         {% endfor %}
-      </ul>
+      </ul> -->
     </div>
   </div>
 </div>
@@ -42,17 +42,14 @@
   </div>
   <div class="card-body">
     <div class="card-text mb-3">
-      <img class="img-fluid helper-photo" src="{% if helper.photo %}{{ helper.photo.url }}{% endif %}" alt="{{ helper.name }}">
       <ul>
         <li>Name: {{ helper.name }}</li>
-        <li>Nickname: {% if helper.nickname %}{{ helper.nickname }}{% else %}<span class="text-muted">Not set</span>{% endif %}</li>
+        <li>Prefered Name: {% if helper.nickname %}{{ helper.nickname }}{% else %}<span class="text-muted">Not set</span>{% endif %}</li>
+        <li>{% if helper.photo %}<span class="text-success">Profile photo uploaded.</span>{% else %}<span class="text-danger">Profile photo not uploaded.</span>{% endif %}</li>
       </ul>
     </div>
-    <div class="card-text my-3">
-      <a href="{% url 'jumpstart:profile-edit' %}">Edit</a>
-    </div>
-    <div class="card-text mt-3">
-      <small class="text-muted">Your profile is visible to ECSS committee and your group members.</small>
+    <div class="card-text">
+      <a href="{% url 'jumpstart:profile-edit' %}" title="Edit your profile.">Edit</a>
     </div>
   </div>
 </div>
