--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -75,7 +75,7 @@
             </li>	
             {% if user|is_helper %}	
             <li>	
-              <a href="{% url 'jumpstart:profile-edit' %}">Edit Profile</a>	
+              <a href="#">Edit Profile</a>	
             </li>	
             <li>	
               <a href="{% url 'jumpstart:city-challenge-edit' %}">Submit City Challenge</a>	
