--- a/jumpstart/templates/jumpstart/helper-profile-edit.html
+++ b/jumpstart/templates/jumpstart/helper-profile-edit.html
@@ -33,8 +33,8 @@
       </div>
       {% endfor %}
       <input type="submit" class="btn btn-ecssweb" value="Update">
-      <div class="my-2">
-        <small class="text-muted">When you update your photo, the old file will not be immediately removed from the server. It will need to be removed manually by us.<br>
+      <div class="card-text my-2">
+        <small class="text-muted d-block">When you update your photo, the old file will not be immediately removed from the server. It will need to be removed manually by us.<br>
         Your profile is visible to freshers in your group for City Challenge and ECSS committee.</small>
       </div>
     </form>
